# signoz-ai-monitoring

./: .gitignore  AGENTS.md  README.md  main.py  mcp_server.py  pyproject.toml
clients/: llm_client.py  telemetry_mcp_client.py
routers/: mcp_tools.py
schemas/: graph_state.py
services/: query_perf_graph.py
tests/api/: test_health.py
tests/architecture/: test_boundaries.py
tests/services/: test_llm_client.py  test_query_perf_graph.py
